feature/rf-06/completado (falta mas data)
