# apps/api/src/domain/models/inventerio.ts
@@ -1,0 +1,11 @@
+
+
+export type TipoItem ="producto" |  "servicio" 
+
+export interface Inventario {
+    id: string;
+    sucursalId: string;
+    itemId: string;
+    tipo: TipoItem;
+    cantidad: number;
+}
