# apps/api/src/infra/repositories/inventario.repository.ts
@@ -1,0 +1,5 @@
+import { inventario} from "../storage/data"
+
+export const findBySucursalId = (sucursalId: string) => {
+  return inventario.filter(i => i.sucursalId === sucursalId);
+};
